fix: some fixes after rev